# RR-GCL

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: DimReduction.py  embedding.ipynb  embviz.py  tSNErunner.py
config/: DGI.yaml  RRGCL.yaml  clf.yaml  dataloader.yaml  neg_sampling.yaml  relation.yaml  subgraph.yaml
data/: DriverExtract.ipynb  EDA.ipynb  __init__.py  anchor_dataset.py  augmentation.py  config_loader.py  helper.py  neighborExtractor.py  runNeighbor.py  scaler.py  subgraph_extractor.py  vizutils.py  vocab.py
data/generation/: README.md
data/generation/alphamissense/: amProcessing.py  (+1 more)
data/reference/: AlphaMissense-Q02078.tsv  AlphaMissense-Q5TKA1.tsv  AlphaMissense-Q9NQR1.tsv  O60814_H2BC12_gnomAD_v4.1.1_ENST00000356950.csv  P11388_TOP2A_gnomAD_v4.1.1_ENST00000423485.csv  Q5EE01_CENPW_gnomAD_v4.1.1_ENST00000368328.csv  Q96KQ7_EHMT2_gnomAD_v4.1.1_ENST00000375537.csv  __init__.py  addUniprot.py  mutagene_info.py  mutagene_type_mutability.json  residue_dictionary.py
dataset/: data.yaml
dataset/generation/: CDSLoader.py  GraphGenerator.py  README.md  helper.py  processing.yaml
dataset/reference/: protein_dictionary.csv
models/: analysis.ipynb
models/Classifier/: CFsbatch.sh  FFN.py  GATClassifier.py  GATsbatch.sh  SAGEClassifier.py  SAGEsbatch.sh  activation.py  execute.py  train.py
models/DGI/: DGIsbatch.sh  dataset.py  execute.py  inference.py  train.py
models/RRGCL/: train.py
scripts/: sbatch.sh
tests/: test_anchor_dataset.py  test_config_loader.py  test_subgraph_extractor.py
utils/: functions.py  graphfunction.py
(+33 files in other folders)
